# my-editor

./: .collab_meta.json  .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
plugins/image-block/: index.tsx  plugin.json
plugins/plugin-manager/: index.tsx  plugin.json  webview.html
plugins/simulation/: index.tsx  plugin.json  webview.html
plugins/slope/: plugin.json
plugins/vim-mode/: index.tsx  plugin.json
plugins/webpage-block/: index.tsx  plugin.json
src/: App.css  App.tsx
src-frontend/: App.css  App.tsx  constants.ts  main.tsx
src-frontend/components/: EditorArea.tsx  EditorWrapper.tsx  ExtensionSidebarView.tsx  FileExplorer.tsx  GlobalModalManager.tsx  MainLayout.tsx  MenuBar.tsx  PasswordModal.tsx  PeerList.tsx  Settings.tsx  Sidebar.tsx  SidebarWebview.tsx  SlashMenu.tsx  WarningModal.tsx  WebviewBlock.tsx  WebviewContainer.tsx  WorkerNodeView.tsx
src-frontend/contexts/: ServiceContext.tsx
src-frontend/engine/: PluginEventBus.ts  PluginLoader.ts  types.ts
src-frontend/extensions/: MarkdownLivePreview.ts
src-frontend/hooks/: useAppBootstrap.ts  useAppLifecycle.ts  useCollaborativeEditor.ts  useEditorManager.ts  useHostNegotiation.ts  useP2P.ts  useProject.ts  useTopbar.ts  useTreeView.ts
src-frontend/mod-engine/: DocumentRegistry.ts  HostAPIImpl.ts  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/relay_server/: Cargo.toml
src-tauri/relay_server/src/: main.rs
src-tauri/src/: commands.rs  lib.rs  main.rs  network.rs  protocol.rs  state.rs
(+62 files in other folders)
