[package]
name = "my-editor"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "my_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.48.0", features = ["full"] }
yrs = "0.24.0"
warp = "0.4.2"
yrs-warp = "0.9.0"
libp2p = { version = "0.56.0", features = ["tokio", "quic", "serde", "ping", "macros", "request-response", "json"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
futures = "0.3.31"
git2 = "0.20.2"
dialog = "0.3.0"
tauri-plugin-dialog = "2.4.2"
