[package]
name = "relay_server"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
libp2p = {version = "0.56.0", features = [
    "tokio", 
    "tcp", 
    "dns", 
    "quic", 
    "noise", 
    "yamux", 
    "relay", 
    "identify", 
    "ping",
    "macros"
]}
tokio = { version = "1.48.0", features = ["full"] }
